--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requests = "^2.26.0"
 google-api-python-client = "^2.24.0"
 google-auth-httplib2 = "^0.1.0"
 google-auth-oauthlib = "^0.4.6"
-click = "^8.0.2"
+google-auth = "2.2.0"
+environs = "^9.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
