--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ google-auth-httplib2 = "^0.1.0"
 google-auth-oauthlib = "^0.4.6"
 google-auth = "2.2.0"
 environs = "^9.3.4"
+python-dateutil = "^2.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
