--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ protobuf==3.18.1; python_version >= "3.6"
 pyasn1-modules==0.2.8; python_version >= "3.6"
 pyasn1==0.4.8; python_version >= "3.6" and python_version < "4"
 pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 python-dotenv==0.19.1; python_version >= "3.6"
 requests-oauthlib==1.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
